--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost/calendar2k20?serverTimezone=CET&characterCoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost/calendar2k20?serverTimezone=CET&characterCoding=UTF-8
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# 
+# logging.level.org.hibernate.SQL=DEBUG
+# 
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-logging.level.org.hibernate.SQL=DEBUG
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 logging.level.com.calendar=TRACE
 logging.file.path=logs
 
