--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ target/
 release.properties
 pom.xml.releaseBackup
 pom.xml.tag
+
+### Sensitive Data ###
+src/main/resources/application-default.properties
