--- a/pom.xml
+++ b/pom.xml
@@ -98,21 +98,21 @@
                 </dependency>
             </dependencies>
         </profile>
-        <profile>
-            <id>heroku</id>
-            <activation>
-                <property>
-                    <name>env.SPRING_PROFILES_ACTIVE</name>
-                    <value>heroku</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                </dependency>
-            </dependencies>
-        </profile>
+<!--        <profile>-->
+<!--            <id>heroku</id>-->
+<!--            <activation>-->
+<!--                <property>-->
+<!--                    <name>env.SPRING_PROFILES_ACTIVE</name>-->
+<!--                    <value>heroku</value>-->
+<!--                </property>-->
+<!--            </activation>-->
+<!--            <dependencies>-->
+<!--&lt;!&ndash;				<dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;					<groupId>org.postgresql</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;					<artifactId>postgresql</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;				</dependency>&ndash;&gt;-->
+<!--            </dependencies>-->
+<!--        </profile>-->
     </profiles>
 
 	<build>
