initial local mysql

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,17 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<type>jar</type>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.12</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 
@@ -98,21 +109,28 @@
                 </dependency>
             </dependencies>
         </profile>
-<!--        <profile>-->
-<!--            <id>heroku</id>-->
-<!--            <activation>-->
-<!--                <property>-->
-<!--                    <name>env.SPRING_PROFILES_ACTIVE</name>-->
-<!--                    <value>heroku</value>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <dependencies>-->
-<!--&lt;!&ndash;				<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;					<groupId>org.postgresql</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;					<artifactId>postgresql</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;				</dependency>&ndash;&gt;-->
-<!--            </dependencies>-->
-<!--        </profile>-->
+        <profile>
+            <id>heroku</id>
+            <activation>
+                <property>
+                    <name>env.SPRING_PROFILES_ACTIVE</name>
+                    <value>heroku</value>
+                </property>
+            </activation>
+            <dependencies>
+				<dependency>
+					<groupId>org.postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+					<version>42.2.12</version>
+				</dependency>
+
+
+
+
+
+
+			</dependencies>
+        </profile>
     </profiles>
 
 	<build>
