--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,9 +1,8 @@
-#spring.datasource.url=jdbc:mysql://localhost/calendar2k20?serverTimezone=CET&characterCoding=UTF-8
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net:3306/heroku_de33372b91785f0
-spring.datasource.username=b9e92473e9a7e2
-spring.datasource.password=fafe343c
+spring.datasource.url=jdbc:mysql://localhost/calendar2k20?serverTimezone=CET&characterCoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=The@peOfNaples01
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#logging.level.org.hibernate.SQL=DEBUG
+
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
