Implementing getProjectIdOfEntry in ProjectViewResponseDto with refactors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.profiles.active=heroku
+#spring.profiles.active=heroku-dev
