--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<version>42.2.12</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+			<version>1.3.5.RELEASE</version>
+		</dependency>
 
 
 
