--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,3 +1,7 @@
+#The environment variable 'DATASOURCE_URL_SHORT' needs to be manually updated on heroku (both prod and dev).
+#The database credentials change periodically, but only the 'DATASOURCE_URL_SHORT' needs maintenance.
+#TODO: There has to be a better way for this --> future implementation
+
 spring.datasource.url=${DATASOURCE_URL_SHORT}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${$JDBC_DATABASE_PASSWORD}
