--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,7 +1,7 @@
-#spring.datasource.url=${DATASOURCE_URL_SHORT}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${$JDBC_DATABASE_PASSWORD}
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATASOURCE_URL_SHORT}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${$JDBC_DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
