--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -2,7 +2,9 @@
 #The database credentials change periodically, but only the 'DATASOURCE_URL_SHORT' needs maintenance.
 #TODO: There has to be a better way for this --> future implementation
 
-spring.datasource.url=${DATASOURCE_URL_SHORT}
+#spring.datasource.url=${DATASOURCE_URL_SHORT}
+spring.datasource.url=${JDBC_DATABASE_URL}
+
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${$JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
